--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -4,12 +4,27 @@ services:
   app:
     image: aguilarufino/laravel-vue-starterkit
     container_name: laravel_app
-    ports:
-      - "8000:8000"
     env_file:
       - .env.prod
     depends_on:
       - mysql
+    networks:
+      - app-network
+    volumes:
+      - .:/var/www  # So nginx can see files
+      - ./storage:/var/www/storage
+      - ./bootstrap:/var/www/bootstrap
+
+  nginx:
+    image: nginx:latest
+    container_name: nginx
+    ports:
+      - "8080:80"  # Change as needed (host:container)
+    depends_on:
+      - app
+    volumes:
+      - .:/var/www
+      - ./nginx/nginx.conf:/etc/nginx/conf.d/default.conf
     networks:
       - app-network
 
