added force https

--- a/.env.prod
+++ b/.env.prod
@@ -25,7 +25,7 @@ DB_HOST=mysql
 DB_PORT=3306
 DB_DATABASE=laratraining
 DB_USERNAME=root
-DB_PASSWORD=
+DB_PASSWORD=root
 
 SESSION_DRIVER=database
 SESSION_LIFETIME=120
