added working nginx conf and docker compose

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -28,4 +28,6 @@ jobs:
         with:
           context: .
           push: true
-          tags: aguilarufino/laravel-vue-starterkit:latest
+          tags: |
+            aguilarufino/laravel-vue-starterkit:latest
+            aguilarufino/laravel-vue-starterkit:${{ github.sha }}
