--- a/nginx.conf
+++ b/nginx.conf
@@ -1,9 +1,9 @@
 server {
     listen 80;
-    index index.php index.html;
     server_name localhost;
 
     root /var/www/public;
+    index index.php index.html;
 
     location / {
         try_files $uri $uri/ /index.php?$query_string;
@@ -11,7 +11,7 @@ server {
 
     location ~ \.php$ {
         include fastcgi_params;
-        fastcgi_pass app:9000; # talk to php-fpm in 'app' container
+        fastcgi_pass app:9000;
         fastcgi_index index.php;
         fastcgi_param SCRIPT_FILENAME $realpath_root$fastcgi_script_name;
         fastcgi_param DOCUMENT_ROOT $realpath_root;
@@ -21,3 +21,4 @@ server {
         deny all;
     }
 }
+
