--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -6,24 +6,20 @@ services:
     container_name: laravel_app
     env_file:
       - .env.prod
-    depends_on:
-      - mysql
+    volumes:
+      - app_code:/var/www
     networks:
       - app-network
-    volumes:
-      - .:/var/www  # So nginx can see files
-      - ./storage:/var/www/storage
-      - ./bootstrap:/var/www/bootstrap
 
   nginx:
     image: nginx:latest
     container_name: nginx
-    ports:
-      - "8080:80"  # Change as needed (host:container)
     depends_on:
       - app
+    ports:
+      - "8080:80"  
     volumes:
-      - .:/var/www
+      - app_code:/var/www
       - ./nginx/nginx.conf:/etc/nginx/conf.d/default.conf
     networks:
       - app-network
@@ -43,6 +39,7 @@ services:
       - app-network
 
 volumes:
+  app_code:
   db_data:
 
 networks:
