--- a/package.json
+++ b/package.json
@@ -30,6 +30,8 @@
         "@vitejs/plugin-vue": "^5.2.1",
         "@vueuse/core": "^12.8.2",
         "axios": "^1.10.0",
+        "chartjs": "^0.3.24",
+        "chartjs-plugin-datalabels": "^2.2.0",
         "class-variance-authority": "^0.7.1",
         "clsx": "^2.1.1",
         "concurrently": "^9.0.1",
@@ -43,6 +45,7 @@
         "vee-validate": "^4.15.1",
         "vite": "^6.2.0",
         "vue": "^3.5.13",
+        "vue-chartjs": "^5.3.2",
         "vue-sonner": "^2.0.0",
         "ziggy-js": "^2.4.2",
         "zod": "^3.25.67"
