--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -28,6 +28,7 @@ jobs:
         with:
           context: .
           push: true
+          no-cache: true
           tags: |
             aguilarufino/laravel-vue-starterkit:latest
             aguilarufino/laravel-vue-starterkit:${{ github.sha }}
