--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -28,6 +28,7 @@ jobs:
         with:
           context: .
           push: true
+          pull: true
           no-cache: true
           tags: |
             aguilarufino/laravel-vue-starterkit:latest
