testing deployment with new docker file

--- a/.env.prod
+++ b/.env.prod
@@ -1,4 +1,4 @@
-APP_NAME=Laravel
+APP_NAME=LaravelTrainingApp
 APP_ENV=production
 APP_KEY=base64:OoRXlRJf4NMH94sSQlVZFCNx7Y/odosHu69bCOttvr0=
 APP_DEBUG=false
