--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -31,7 +31,9 @@ jobs:
           file: ./Dockerfile
           push: true
           pull: true
-          no-cache: true
+          platforms: linux/amd64,linux/arm64
+          cache-from: type=registry,ref=aguilarufino/laravel-vue-starterkit:cache
+          cache-to: type=inline
           tags: |
             aguilarufino/laravel-vue-starterkit:latest
             aguilarufino/laravel-vue-starterkit:${{ github.sha }}
