--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -6,8 +6,10 @@ services:
     container_name: laravel_app
     env_file:
       - .env.prod
+    labels:
+      - "com.centurylinklabs.watchtower.enable=true"
     volumes:
-      - laravel_app:/var/www
+      - app_code:/var/www-volume
     networks:
       - app-network
 
@@ -17,9 +19,9 @@ services:
     depends_on:
       - app
     ports:
-      - "8080:80"  
+      - "8080:80"  # Or 80:80 if no reverse proxy
     volumes:
-      - laravel_app:/var/www
+      - app_code:/var/www
       - ./nginx/nginx.conf:/etc/nginx/conf.d/default.conf
     networks:
       - app-network
@@ -39,8 +41,8 @@ services:
       - app-network
 
 volumes:
+  app_code:
   db_data:
-  laravel_app:
 
 networks:
   app-network:
