--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -16,21 +16,26 @@ jobs:
         with:
           fetch-depth: 0
 
-      # - name: Log in to Docker Hub
-      #   uses: docker/login-action@v3
-      #   with:
-      #     username: ${{ secrets.DOCKER_USERNAME }}
-      #     password: ${{ secrets.DOCKER_PASSWORD }}
+      - name: Log in to Docker Hub
+        uses: docker/login-action@v3
+        with:
+          username: ${{ secrets.DOCKER_USERNAME }}
+          password: ${{ secrets.DOCKER_PASSWORD }}
+
+      - name: Pre-pull BuildKit image
+        run: docker pull moby/buildkit:buildx-stable-1
 
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
-
-      - name: Login to Docker Registry
-        uses: docker/login-action@v2
         with:
-          registry: registry.bukidnon.gov.ph
-          username: ${{ secrets.PGB_REGISTRYUSERNAME }}
-          password: ${{ secrets.PGB_REGISTRYPASSWORD }}
+          driver: docker
+
+      # - name: Login to Docker Registry
+      #   uses: docker/login-action@v2
+      #   with:
+      #     registry: registry.bukidnon.gov.ph
+      #     username: ${{ secrets.PGB_REGISTRYUSERNAME }}
+      #     password: ${{ secrets.PGB_REGISTRYPASSWORD }}
 
       - name: Build and Push Docker Image
         uses: docker/build-push-action@v3
