--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -16,11 +16,17 @@ jobs:
         with:
           fetch-depth: 0
 
-      - name: Log in to Docker Hub
-        uses: docker/login-action@v3
+      # - name: Log in to Docker Hub
+      #   uses: docker/login-action@v3
+      #   with:
+      #     username: ${{ secrets.DOCKER_USERNAME }}
+      #     password: ${{ secrets.DOCKER_PASSWORD }}
+      - name: Login to Docker Registry
+        uses: docker/login-action@v2
         with:
-          username: ${{ secrets.DOCKER_USERNAME }}
-          password: ${{ secrets.DOCKER_PASSWORD }}
+          registry: registry.bukidnon.gov.ph
+          username: ${{ secrets.PGB_REGISTRYUSERNAME }}
+          password: ${{ secrets.PGB_REGISTRYPASSWORD }}
 
       - name: Pre-pull BuildKit image
         run: docker pull moby/buildkit:buildx-stable-1
@@ -29,14 +35,7 @@ jobs:
         uses: docker/setup-buildx-action@v3
         with:
           driver: docker
-
-      # - name: Login to Docker Registry
-      #   uses: docker/login-action@v2
-      #   with:
-      #     registry: registry.bukidnon.gov.ph
-      #     username: ${{ secrets.PGB_REGISTRYUSERNAME }}
-      #     password: ${{ secrets.PGB_REGISTRYPASSWORD }}
-
+          
       - name: Build and Push Docker Image
         uses: docker/build-push-action@v3
         with:
