--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,45 +1,47 @@
 # .github/workflows/docker-publish.yml
 
+# This workflow is responsible for building and pushing a Docker image to Docker Hub.
+# It triggers on a push event to the `main` branch.
+
 name: Build and Push Docker Image
 
 on:
   push:
-    branches: [main]
+    branches: [main] # The workflow runs whenever there is a push to the `main` branch.
 
 jobs:
   build-and-push:
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-latest # The job will run on the latest Ubuntu runner provided by GitHub.
 
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
         with:
-          fetch-depth: 0
+          fetch-depth: 0 # Ensures the full Git history is fetched, which is useful for versioning.
 
       - name: Log in to Docker Hub
         uses: docker/login-action@v3
         with:
-          username: ${{ secrets.DOCKER_USERNAME }}
-          password: ${{ secrets.DOCKER_PASSWORD }}
-      # - name: Login to Docker Registry
-      #   uses: docker/login-action@v2
-      #   with:
-      #     registry: registry.bukidnon.gov.ph
-      #     username: ${{ secrets.PGB_REGISTRYUSERNAME }}
-      #     password: ${{ secrets.PGB_REGISTRYPASSWORD }}
+          username: ${{ secrets.DOCKER_USERNAME }} # Docker Hub username stored in GitHub Secrets.
+          password: ${{ secrets.DOCKER_PASSWORD }} # Docker Hub password or personal access token stored in GitHub Secrets.
 
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
+        # This sets up Docker Buildx, a CLI plugin for building multi-platform Docker images.
 
       - name: Build and Push Docker Image
         uses: docker/build-push-action@v3
         with:
-          context: .
-          file: ./Dockerfile
-          push: true
-          pull: true
+          context: . # The build context is the root directory of the repository.
+          file: ./Dockerfile # Specifies the Dockerfile to use for building the image.
+          push: true # Pushes the built image to the Docker registry.
+          pull: true # Ensures the latest base image is pulled before building.
           cache-from: type=registry,ref=aguilarufino/laravel-vue-starterkit:cache
+          # Uses a cache stored in the Docker registry to speed up builds.
           cache-to: type=registry,ref=aguilarufino/laravel-vue-starterkit:cache,mode=max
+          # Saves the build cache to the Docker registry for future builds.
+          # Tags the image as `latest`.
+          # Tags the image with the Git commit SHA for traceability.
           tags: |
-            aguilarufino/laravel-vue-starterkit:latest
-            aguilarufino/laravel-vue-starterkit:${{ github.sha }}
+            aguilarufino/laravel-vue-starterkit:latest 
+            aguilarufino/laravel-vue-starterkit:${{ github.sha }} 
