--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,49 +1,54 @@
-version: '3.8'
+version: '3.8' # Specifies the Docker Compose file format version.
 
 services:
+  # Laravel application service
   app:
-    image: aguilarufino/laravel-vue-starterkit
-    container_name: laravel_app
+    image: aguilarufino/laravel-vue-starterkit # The Docker image for the Laravel application.
+    container_name: laravel_app # The name of the container for the Laravel app.
     env_file:
-      - .env.prod
+      - .env.prod # Specifies the environment file to load environment variables from.
     labels:
-      - "com.centurylinklabs.watchtower.enable=true"
+      - "com.centurylinklabs.watchtower.enable=true" # Label for Watchtower to enable automatic updates.
     volumes:
-      - app_code:/var/www-volume
+      - app_code:/var/www-volume # Mounts the shared volume for the application code.
     networks:
-      - app-network
+      - app-network # Connects the container to the specified network.
 
+  # Nginx service for serving the Laravel application
   nginx:
-    image: nginx:latest
-    container_name: nginx
+    image: nginx:latest # The Docker image for Nginx.
+    container_name: nginx # The name of the container for Nginx.
     depends_on:
-      - app
+      - app # Ensures the Laravel app container starts before Nginx.
     ports:
-      - "8080:80"  # Or 80:80 if no reverse proxy
+      - "8080:80" # Maps port 8080 on the host to port 80 in the container.
     volumes:
-      - app_code:/var/www
-      - ./nginx/nginx.conf:/etc/nginx/conf.d/default.conf
+      - app_code:/var/www # Mounts the shared volume for the application code.
+      - ./nginx/nginx.conf:/etc/nginx/conf.d/default.conf # Mounts the custom Nginx configuration file.
     networks:
-      - app-network
+      - app-network # Connects the container to the specified network.
 
+  # MySQL database service
   mysql:
-    image: mysql:8.0
-    container_name: mysql
-    restart: unless-stopped
+    image: mysql:8.0 # The Docker image for MySQL.
+    container_name: mysql # The name of the container for MySQL.
+    restart: unless-stopped # Automatically restarts the container unless explicitly stopped.
     ports:
-      - "3309:3306"
+      - "3309:3306" # Maps port 3309 on the host to port 3306 in the container.
     environment:
-      MYSQL_ROOT_PASSWORD: root
-      MYSQL_DATABASE: laratraining
+      MYSQL_ROOT_PASSWORD: root # Sets the root password for MySQL.
+      MYSQL_DATABASE: laratraining # Creates a database named `laratraining`.
     volumes:
-      - db_data:/var/lib/mysql
+      - db_data:/var/lib/mysql # Mounts the volume for MySQL data persistence.
     networks:
-      - app-network
+      - app-network # Connects the container to the specified network.
 
+# Volumes for persistent data storage
 volumes:
-  app_code:
-  db_data:
+  app_code: # Volume for the Laravel application code.
+  db_data: # Volume for MySQL data.
 
+# Network configuration
 networks:
   app-network:
-    driver: bridge
+    driver: bridge # Specifies the bridge network driver for container communication.
